Fix build and main spacing issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,20 +44,19 @@ iframe {
   width: 100%;
 }
 
-@media screen and (min-width: 1050px) {
-  .wrapper {
-    width: 1050px;
-    margin: 75px auto 0px;
-  }
-}
-
 .home-table {
   margin: 0 auto;
-  width: 600px;
+  width: 750px;
   .row {
     margin-bottom: 25px;
   }
+}
 
+@media screen and (max-width: 750px) {
+  .home-table {
+    margin: 0 auto;
+    width: 100%;
+  }
 }
 
 .plug-it-in {
